--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/ch.simas.qlrm/qlrm
+    implementation 'ch.simas.qlrm:qlrm:1.7.1' // DTO 레퍼지토리 쓰려면
+
+    runtimeOnly 'com.h2database:h2'
+
     implementation 'javax.servlet:jstl'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
