--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,5 +13,5 @@ spring:
     password: 101101
   jpa:
     hibernate:
-#      ddl-auto: create
+      ddl-auto: create # create 하면 db table 매번 새로만듬   /   update
     show-sql: true
